[project]
name = "client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2a-samples",
    "asyncclick>=8.1.8",
    "fastapi>=0.115.12",
    "google-genai>=1.15.0",
    "python-dotenv>=1.1.0",
    "sseclient>=0.0.27",
    "streamlit>=1.45.1",
    "streamlit-server-state>=0.20.2",
]

[tool.uv.sources]
a2a-samples = { git = "https://github.com/google/A2A", subdirectory = "samples/python" }
